WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302036
[Swift in WebKit] Fix inconsistent use of `extern` in wtf/spi
https://bugs.webkit.org/show_bug.cgi?id=302036
Summary
[Swift in WebKit] Fix inconsistent use of `extern` in wtf/spi
Richard Robinson
Reported
2025-11-05 13:36:12 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-05 13:36:19 PST
<
rdar://problem/164114471
>
Richard Robinson
Comment 2
2025-11-05 13:38:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53479
EWS
Comment 3
2025-11-05 20:03:20 PST
Committed
302624@main
(601c7d72bded): <
https://commits.webkit.org/302624@main
> Reviewed commits have been landed. Closing PR #53479 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug