[Swift in WebKit] Fix inconsistent use of `extern` in wtf/spi https://bugs.webkit.org/show_bug.cgi?id=302036 rdar://164114471

Reviewed by Aditya Keerthi.

All files in wtf/spi are Objective-C and Objective-C++ compliant in spirit, however there are a few header files
that do not use compile guards as needed unlike the others.

Fix by adding the appropriate guards so these files compile as intended.

* Source/WTF/wtf/spi/cf/CFPrivSPI.h:
* Source/WTF/wtf/spi/cf/CFRunLoopSPI.h:
* Source/WTF/wtf/spi/cf/CFStringSPI.h:
* Source/WTF/wtf/spi/darwin/ProcessMemoryFootprint.h:

Canonical link: https://commits.webkit.org/302624@main