Source/WTF/wtf/spi/cf/CFStringSPI.h
@@ -36,7 +36,7 @@ DECLARE_SYSTEM_HEADER
 
 #else
 
-extern "C" {
+WTF_EXTERN_C_BEGIN
 
 typedef CF_ENUM(CFIndex, CFStringCharacterClusterType)
 {
@@ -45,14 +45,14 @@ typedef CF_ENUM(CFIndex, CFStringCharacterClusterType)
     kCFStringBackwardDeletionCluster = 4
 };
 
-}
+WTF_EXTERN_C_END
 
 #endif
 
-extern "C" {
+WTF_EXTERN_C_BEGIN
 
 CFRange CFStringGetRangeOfCharacterClusterAtIndex(CFStringRef, CFIndex charIndex, CFStringCharacterClusterType);
 void _CFStringGetUserDefaultEncoding(UInt32* scriptValue, UInt32* regionValue);
 
-}
+WTF_EXTERN_C_END
 
